--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<div class="jumbotron">
 			<h1><i class="icon-dashboard icon-red"></i> System Status <small data-i18n="head.subtitle"><a href = "http://www.yangl1996.com">Lei's Web</a></small></h1>
 
+			<div id="subtitle-container"></div>
 			<p data-i18n="head.hero">
 				This page shows the availability of my web services.
 			</p>
